Update 3. Kitchen Image -> JSON - Empty Room.md

--- a/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room.md
@@ -27,9 +27,9 @@
   "media": {
     "floor": "image_0.png",
     "refs": [
-      { "id": "ref_1", "file": "image_1.png" },
-      { "id": "ref_2", "file": "image_2.png" },
-      { "id": "ref_3", "file": "image_3.png" }
+      { "id": "ref_1", "file": "A10CFBF3-F5D7-4A35-913B-1140C486DCC6_1_105_c.jpeg" },
+      { "id": "ref_2", "file": "1AB53723-0BA6-434B-930B-1DCD3E522123_1_105_c.jpeg" },
+      { "id": "ref_3", "file": "/1B8611B9-339C-4EF6-BCF9-3B68E604DDE8_1_105_c.jpeg" }
     ]
   },
   "space": {
