Update 3. Kitchen Image -> JSON - Empty Room.md

--- a/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room.md
@@ -3,7 +3,7 @@
     "intent": "Architecturally_prepare_room_for_future_design_renders",
     "scope": "render_ALL_views",
     "goal": "architectural_preparation",
-    "description": "remove ALL elements with 'rm': true; replace according to 'rm'; render IDENTICAL room"
+    "description": "remove ALL elements 'rm': true + replace according to 'rm'; keep ALL elements 'rm': false; render IDENTICAL room"
   },
   "legend": {
     "cat": {
