Update 3. Kitchen Bill of Quantities.md

--- a/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
@@ -1,13 +1,13 @@
 # Bill of Quantities
 
-##### 1. Architecture (arch)
+#### 1. Architecture (arch)
 - **Structure:**
     - 1x Staircase with stone steps and metal railing.
 - **Surfaces:**
     - 1x Floor section covered in terracotta square tiles throughout the room.
     - 1x Flat painted ceiling.
 
-##### 2. Openings (open)
+#### 2. Openings (open)
 - **Windows:**
     - 4x separate black aluminium Casement windows
 - **Doors:**
@@ -16,7 +16,7 @@
     - 1x Archway passage leading to the staircase.
     - 1x Dumbwaiter pass-through opening.
 
-##### 3. Fixed Elements (fix)
+#### 3. Fixed Elements (fix)
 *Attached, non-structural items and joinery.*
 - **MEP:**
     - 1x Wall-mounted AC unit.
@@ -34,12 +34,12 @@
     - 1x White ceramic sink/basin.
     - 1x Kitchen faucet/tap.
 
-##### 4. Appliances (appl)
+#### 4. Appliances (appl)
 - **Major:**
     - 1x Washing machine (front-loading).
     - 1x Tumble dryer (front-loading).
 
-##### 5. Furniture (furn)
+#### 5. Furniture (furn)
 - **Seating:**
     - 8x Black metal folding chairs.
 - **Surfaces:**
@@ -49,14 +49,14 @@
     - 1x Large blue plastic laundry basket.
     - 1x Metal trash bin.
 
-##### 6. Decor (dec)
+#### 6. Decor (dec)
 - **Art:**
     - 4x Framed posters/pictures (various sizes on walls).
 - **Objects:**
     - 1x Blue plastic basin.
     - 1x Clothing iron.
 
-##### 7. Groups (grp)
+#### 7. Groups (grp)
 - **Clutter:**
     - 1x Kitchenette counter clutter (bottles, cleaning supplies, baskets).
     - 1x Long counter clutter (items on shelf and counter).
