Update kitchen bill of quantities descriptions

--- a/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
@@ -28,32 +28,30 @@
     { "cat": "arch", "d": "terracotta tile floor" },
     { "cat": "arch", "d": "flat painted ceiling" },
     { "cat": "arch", "d": "1x ceiling fan" },
-    { "cat": "open", "d": "4x windows with dark frames" },
+    { "cat": "open", "d": "4x windows with black aluminium frames" },
     { "cat": "open", "d": "2x black aluminium door openings" },
     { "cat": "open", "d": "Archway" },
     { "cat": "fix", "d": "wooden lower cabinets" },
     { "cat": "fix", "d": "wooden upper cabinets" },
-    { "cat": "fix", "d": "Wall mounted cabinet" },
+    { "cat": "fix", "d": "wall mounted cabinet" },
     { "cat": "fix", "d": "wooden countertops" },
-    { "cat": "fix", "d": "Wall-mounted open shelving unit (above long counter)" },
+    { "cat": "fix", "d": "wall-mounted open shelving unit (above long counter)" },
     { "cat": "fix", "d": "sink" },
-    { "cat": "fix", "d": "dumbwaiter/hatch" },
-    { "cat": "fix", "d": "ceiling mounted clothes drying lines" },
+    { "cat": "fix", "d": "dumbwaiter" },
+    { "cat": "fix", "d": "wall mounted clothes drying lines" },
     { "cat": "fix", "d": "4x wall sconces" },
     { "cat": "appl", "d": "1x washing machine" },
-    { "cat": "appl", "d": "tumble dryer" },
+    { "cat": "appl", "d": "1x tumble dryer" },
     { "cat": "appl", "d": "1x wall mounted AC unit" },
-    { "cat": "furn", "d": "large oval black table" },
-    { "cat": "furn", "d": "9x black metal chairs" },
-    { "cat": "furn", "d": "metal trash bin" },
+    { "cat": "furn", "d": "1x large oval black table" },
+    { "cat": "furn", "d": "8x black metal chairs" },
+    { "cat": "furn", "d": "1x metal trash bin" },
     { "cat": "dec", "d": "2x posters" },
-    { "cat": "dec", "d": "small wall mounted objects" },
     { "cat": "grp", "d": "clutter on counters (bottles, containers)" },
     { "cat": "grp", "d": "folded clothes" },
     { "cat": "grp", "d": "ironing board and iron" },
     { "cat": "grp", "d": "blue laundry baskets" },
     { "cat": "grp", "d": "bags of clothes" },
-    { "cat": "grp", "d": "clothes pegs on line" }
   ]
 }
 }
