Update 3. Kitchen Bill of Quantities.md

--- a/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Bill of Quantities.md
@@ -56,9 +56,9 @@
     { "cat": "grp", "w_id": null, "d": "Blue laundry basket" },
   ],
   "views": [
-    { "id": "v_1", "ref": "image_1.png" },
-    { "id": "v_2", "ref": "image_2.png" },
-    { "id": "v_3", "ref": "image_3.png" }
+    { "id": "v_1", "ref": "Reference_1.png" },
+    { "id": "v_2", "ref": "Reference_2.png" },
+    { "id": "v_3", "ref": "Reference_3.png" }
   ]
 }
 }
